2005-03-19  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* java/lang/IllegalArgumentException:
	(IllegalArgumentException(String, Throwable)):
	Implemented.
	(IllegalArgumentException(Throwable)): Likewise.
	(IllegalStateException(String, Throwable)):
	Implemented.
	(IllegalStateException(Throwable)): Likewise.
	(SecurityException(String, Throwable)):
	Implemented.
	(SecurityException(Throwable)): Likewise.
	(UnsupportedOperationException(String, Throwable)):
	Implemented.
	(UnsupportedOperationException(Throwable)): Likewise.

2005-03-12  Audrius Meskauskas  <audriusa@bluewin.ch>

	* org/omg/CORBA/StringSeqHelper.java,
	org/omg/CORBA/WStringSeqHelper.java: New files.

2005-03-12  Mark Wielaard  <mark@klomp.org>

	* doc/www.gnu.org/events/escape_fosdem05.wml: Add links to
	presentations.

2005-03-11  Chris Burdess  <dog@gnu.org>

	* gnu/xml/dom/html2/DomHTMLButtonElement.java,
	gnu/xml/dom/html2/DomHTMLCollection.java,
	gnu/xml/dom/html2/DomHTMLDocument.java,
	gnu/xml/dom/html2/DomHTMLElement.java: Extensions for new element
	types.
	* gnu/xml/dom/html2/DomHTMLDListElement.java,
	gnu/xml/dom/html2/DomHTMLDirectoryElement.java,
	gnu/xml/dom/html2/DomHTMLDivElement.java,
	gnu/xml/dom/html2/DomHTMLFieldSetElement.java,
	gnu/xml/dom/html2/DomHTMLFontElement.java,
	gnu/xml/dom/html2/DomHTMLFormElement.java,
	gnu/xml/dom/html2/DomHTMLFrameElement.java,
	gnu/xml/dom/html2/DomHTMLFrameSetElement.java,
	gnu/xml/dom/html2/DomHTMLHRElement.java,
	gnu/xml/dom/html2/DomHTMLHeadElement.java,
	gnu/xml/dom/html2/DomHTMLHeadingElement.java,
	gnu/xml/dom/html2/DomHTMLHtmlElement.java,
	gnu/xml/dom/html2/DomHTMLIFrameElement.java,
	gnu/xml/dom/html2/DomHTMLImageElement.java,
	gnu/xml/dom/html2/DomHTMLInputElement.java,
	gnu/xml/dom/html2/DomHTMLIsIndexElement.java,
	gnu/xml/dom/html2/DomHTMLLIElement.java,
	gnu/xml/dom/html2/DomHTMLLabelElement.java,
	gnu/xml/dom/html2/DomHTMLLegendElement.java,
	gnu/xml/dom/html2/DomHTMLLinkElement.java,