@@ -1,3 +1,15 @@
+2005-03-21  Andrew John Hughes  <gnu_andrew@member.fsf.org>
+
+	* java/lang/Class.java:
+	Implements java.lang.reflect.Type
+	* java/lang/ClassLoader.java:
+	(getResources(String)): No longer final.
+	* java/lang/Enum.java:
+	Added serialization UID.
+	* java/lang/Thread.java:
+	(destroy()): Deprecated.
+	(Thread.State): Added serialization UID.
+	
 2005-03-19  Andrew John Hughes  <gnu_andrew@member.fsf.org>
 
 	* java/lang/IllegalArgumentException:
